--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantiu.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>More Info</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Mindmap</h3>
 
 
 <iframe src="https://atlas.mindmup.com/2015/11/7428836069d40133f25f2b2669e0aea4/ohjelmistosuunnittelu_testaus/index.html"></iframe>
