--- a/index.html
+++ b/index.html
@@ -64,4 +64,6 @@
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
+  <img src="https://dl.dropboxusercontent.com/u/14115930/Pencils.jpg" alt="Mountain View" style="width:304px;height:228px;">
+  
 </html>
