--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
-<img src="https://dl.dropboxusercontent.com/u/14115930/Pencils.jpg" alt="Mountain View" style="width:600px;height:228px;">
+<img src="https://dl.dropboxusercontent.com/u/14115930/Pencils.jpg" alt="Mountain View">
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/JAMK-IT">JAMK-IT</a></p>
