--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Welcome to TT0S0100-software-desing-and-testing</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing">View the Project on GitHub <small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
+        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">View the Course Wiki on GitHub <small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
 
 
         <ul>
