--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h3>
 <a id="course-description-templates" class="anchor" href="#course-description-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description of the Course</h3>
 
-<p>blaa blaa Course Description</p>
+<p>Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error sit.Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error sit.Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Target of the course</h3>
