--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p></p>
 
         <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">View the Course Wiki on GitHub <small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
-
+        <p class="view"><a href="https://asio.jamk.fi/pls/asio/asio_ectskuv1.kurssin_ks?ktun=TTOS0100&knro=&noclose=%20&lan=fi">View the ASIO Course Description>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
 
         <ul>
           <li><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -41,7 +41,7 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Target of the course</h3>
 
-<p>Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error sit.</p>
+<p>Opiskelija ymmärtää ohjelmistosuunnitelun ja testauksen merkityksen osana tuotekehitysprosessia. Opiskeluja tuntee ohjelmistoteollisuuden yleisesti käyttämät toimintatavat ja kuvauskielet. Opiskelija kykenee tuottamaan testitapauksia vaatimusmäärittelyiden pohjalta.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teacher</h3>
