--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to TT0S0100 GitHub Pages.</h3>
 
-<p>This is a working example of new course environment which is running on GitHub.</p>
+<p>Tämä on käytännön esimerkki kurssiympäristöstä, joka on toteutettu GitHubin varaan.</p>
 
 <h3>
-<a id="course-description-templates" class="anchor" href="#course-description-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description of the Course</h3>
+<a id="course-description-templates" class="anchor" href="#course-description-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin sisältö</h3>
 
-<p>Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error sit.Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error sit.Lorem Ipsum Sed ut perspiciatis unde omnis iste natus error.</p>
+<p>Palvelumuotoilu, vaatimusmäärittely, ohjelmistoarkkitehtuurit, olio-suunnittelu ja mallintamismenetelmät, testaussuunnittelun perusteet.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Target of the course</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tavoitteet</h3>
 
 <p>Opiskelija ymmärtää ohjelmistosuunnitelun ja testauksen merkityksen osana tuotekehitysprosessia. Opiskeluja tuntee ohjelmistoteollisuuden yleisesti käyttämät toimintatavat ja kuvauskielet. Opiskelija kykenee tuottamaan testitapauksia vaatimusmäärittelyiden pohjalta.</p>
 
