--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Mindmap</h3>
 
 
-<iframe src="https://atlas.mindmup.com/2015/11/e3f965406c370133eea40fc7cf8ea63c/ohjelmistosuunnittelu_testaus/index.html" width="600" height="300" ></iframe>
+<iframe src="<iframe src="https://atlas.mindmup.com/2015/11/ea8b1fe0770401338596238a2f247ac9/ohjelmistosuunnittelu_testaus/index.html"></iframe>" width="600" height="300" ></iframe>
 
 
 
