--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Mindmap</h3>
 
 
-<iframe src="<iframe src="https://atlas.mindmup.com/2015/11/ea8b1fe0770401338596238a2f247ac9/ohjelmistosuunnittelu_testaus/index.html"></iframe>" width="600" height="300" ></iframe>
 
-
+<iframe src="https://atlas.mindmup.com/2015/11/cae4eab0770501338596238a2f247ac9/ohjelmistosuunnittelu_testaus/index.html" width="600" height="300"></iframe>
 
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
 <img src="https://dl.dropboxusercontent.com/u/14115930/Pencils.jpg" alt="Mountain View">
