--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to TT0S0100 GitHub Pages.</h3>
 
-<p>Tämä on käytännön esimerkki kurssiympäristöstä, joka on toteutettu GitHubin varaan.</p>
+<p>Tämä on kurssin GitHub-työympäristö</p>
 
 <h3>
 <a id="course-description-templates" class="anchor" href="#course-description-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin sisältö</h3>
 
-<p>Palvelumuotoilu, vaatimusmäärittely, ohjelmistoarkkitehtuurit, olio-suunnittelu ja mallintamismenetelmät, testaussuunnittelun perusteet.</p>
+<p>Palvelumuotoilu, vaatimusmäärittely, ohjelmistoarkkitehtuurit, olio-suunnittelun alkeet ja mallintamismenetelmät, testiuunnittelun perusteet.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tavoitteet</h3>
 
-<p>Opiskelija ymmärtää ohjelmistosuunnitelun ja testauksen merkityksen osana tuotekehitysprosessia. Opiskeluja tuntee ohjelmistoteollisuuden yleisesti käyttämät toimintatavat ja kuvauskielet. Opiskelija kykenee tuottamaan testitapauksia vaatimusmäärittelyiden pohjalta.</p>
+<p>Kurssin päätavoite on johdattaa opiskelija ymmärtämään sähköisten palveluiden määrittelytyön merkityksen osana tuotekehitysprosessia.  </p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teacher</h3>
 
-<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantiu.</p>
+<p>NarsuMan & Co</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Mindmap</h3>
@@ -55,7 +55,7 @@
 
 <iframe src="https://atlas.mindmup.com/2015/11/cae4eab0770501338596238a2f247ac9/ohjelmistosuunnittelu_testaus/index.html" width="600" height="300"></iframe>
 
-<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+<p>Joskus paperikin on tarpeen.....</p>
 <img src="https://dl.dropboxusercontent.com/u/14115930/Pencils.jpg" alt="Mountain View">
       </section>
       <footer>
