--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tavoitteet</h3>
 
-<p>Kurssin päätavoite on johdattaa opiskelija ymmärtämään sähköisten palveluiden määrittelytyön merkityksen osana tuotekehitysprosessia.  </p>
+<p>Opiskelija ymmärtää ohjelmistosuunnitelun ja testauksen merkityksen osana tuotekehitysprosessia. Opiskeluja tuntee ohjelmistoteollisuuden yleisesti käyttämät toimintatavat ja kuvauskielet. Opiskelija kykenee tuottamaan testitapauksia vaatimusmäärittelyiden pohjalta.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teacher</h3>
