--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 <p>Opiskelija ymmärtää ohjelmistosuunnitelun ja testauksen merkityksen osana tuotekehitysprosessia. Opiskeluja tuntee ohjelmistoteollisuuden yleisesti käyttämät toimintatavat ja kuvauskielet. Opiskelija kykenee tuottamaan testitapauksia vaatimusmäärittelyiden pohjalta.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teacher</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin ohjaajat</h3>
 
 <p>NarsuMan & Co</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Mindmap</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin sisältö MindMup-muodossa</h3>
 
 
 
