--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Welcome to TT0S0100-software-desing-and-testing</h1>
+        <h1>Tervetuloa TT0S0100 kurssille!</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">View the Course Wiki on GitHub <small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
-        <p class="view"><a href="https://asio.jamk.fi/pls/asio/asio_ectskuv1.kurssin_ks?ktun=TTOS0100&knro=&noclose=%20&lan=fi">View the ASIO Course Description>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
+        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">Tästä pääset wikiin<small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
+        <p class="view"><a href="https://asio.jamk.fi/pls/asio/asio_ectskuv1.kurssin_ks?ktun=TTOS0100&knro=&noclose=%20&lan=fi">Tarkista virallinen ASIO kuvaus täältä>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
 
         <ul>
           <li><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
