--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Tervetuloa TT0S0100 kurssille!</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">Tästä pääset wikiin<small>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
+        <p class="view"><a href="https://github.com/JAMK-IT/TT0S0100-software-desing-and-testing/wiki">Tästä pääset kurssin wikiin</a></p>
         <p class="view"><a href="https://asio.jamk.fi/pls/asio/asio_ectskuv1.kurssin_ks?ktun=TTOS0100&knro=&noclose=%20&lan=fi">Tarkista virallinen ASIO kuvaus täältä>JAMK-IT/TT0S0100-software-desing-and-testing</small></a></p>
 
         <ul>
