--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin ohjaajat</h3>
 
-<p>NarsuMan & Co</p>
+<p>Marko "NarsuMan" Rintamäki & Paavo Nelimarkka</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kurssin sisältö MindMup-muodossa</h3>
